--- a/environment.yml
+++ b/environment.yml
@@ -8,8 +8,6 @@ dependencies:
   - pandas=2.2.0
   - networkx=3.2.1
   - requests=2.31.0
-  - beautifulsoup4=4.12.2
-  - gensim=4.3.3
   - tqdm=4.66.1
 
   # Dev
@@ -17,7 +15,8 @@ dependencies:
   - seaborn=0.12.2
   - jupyterlab=4.0.5
 
-  #- pip
-  #- pip:
+  - pip
+  - pip:
+    - FlagEmbedding==1.3.5
   #  - pybliometrics==3.6.0
   #  - scholarly==1.7.11
